--- a/styles/mid-fi Style.css
+++ b/styles/mid-fi Style.css
@@ -66,6 +66,10 @@ a {
     font-weight: 500;
 }
 
+.project {
+    display: none;
+}
+
 #project_viewerport {
     background-color: transparent;
     background-position: center;
