--- a/styles/mid-fi Style.css
+++ b/styles/mid-fi Style.css
@@ -9,6 +9,7 @@ html, body {
     width: 100%;
     height: 100%;
     font-family: 'Montserrat', sans-serif;
+    margin: 0%;
 }
 
 #reset {
@@ -29,6 +30,7 @@ h2 {
     font-weight: 200;
     text-align: center;
     color: rgb(91,91,91);
+    padding-bottom: 1%;
 }
 
 h3 {
@@ -71,20 +73,24 @@ a {
 }
 
 #project_viewerport {
+    display: flex;
     background-color: transparent;
     background-position: center;
     background-size: contain;
     height: 65%;
     margin: auto;
+    justify-content: center;
+    align-items: center;
 }
 
-img {
-    object-fit: fill;
+.project_thumbnail {
+    min-height: 64vh;
+    max-height: 64vh;
 }
 
 .project_description {
-    margin-left: 23%;
     position: absolute;
+    left: 20%;
     top: 60%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
@@ -180,7 +186,7 @@ ul {
     text-align: center;
     overflow: auto;
     white-space: nowrap;
-    width: auto;
+    width: 100%;
 }
 
 li {
