--- a/styles/holding Style.css
+++ b/styles/holding Style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap');
 
 html, body {
-    background-image: url(../images/holding_Background.png);
+    background-image: url(../images/holding_Background-anim.gif);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -12,27 +12,51 @@ html, body {
     margin: 0%;
 }
 
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 40vh;
-    padding-top: 25vh;
+p {
+    font-size: 12pt;
+    font-weight: 100;
+    font-style: italic;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding-bottom: 1%;
+}
+
+#author {
+    text-align: right;
+    font-style: normal;
+}
+
+#quote {
+    margin: 0;
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 h2 {
-    font-size: 64pt;
+    font-size: 36pt;
     font-weight: 100;
-    text-align: center;
     color: rgb(3, 240, 255);
+    text-align: center;
     padding-bottom: 1%;
 }
 
 h3 {
-    font-size: 36pt;
+    font-size: 24pt;
     font-weight: 100;
     text-align: center;
     color: rgb(255, 255, 255);
+}
+
+#centerObjects {
+    margin: 0;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 #contact {
