--- a/styles/mid-fi Style.css
+++ b/styles/mid-fi Style.css
@@ -2,41 +2,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap');
 
 html, body {
-    background-image: url("https://i.ibb.co/jfcSqPm/Presentation-Background.png");
+    background-image: url(../images/Website-Background.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     width: 100%;
     height: 100%;
     font-family: 'Montserrat', sans-serif;
+    margin: 0%;
 }
 
-h1 {
+#reset {
+    font-family: 'Montserrat', sans-serif;
+    padding-top: 1%;
     font-size: 39pt;
     font-weight: 300;
     text-align: center;
     color: rgb(0,152,167);
+    background-color: transparent;
+    border: 0;
+    margin: 0 auto;
+    display: block;
 }
 
 h2 {
-    padding: 0.5%;
     font-size: 25pt;
     font-weight: 200;
     text-align: center;
     color: rgb(91,91,91);
+    padding-bottom: 1%;
 }
 
 h3 {
     padding: 1%;
     font-size: 24pt;
-    font-weight: 400;
+    font-weight: 200;
     color: rgb(255, 255, 255);
 }
 
 h4 {
-    padding: 1%;
+    padding-top: 0.5%;
     font-size: 16pt;
-    font-weight: 400;
+    font-weight: 200;
+    text-align: center;
+    color: aliceblue;
 }
 
 h5 {
@@ -44,6 +53,7 @@ h5 {
     font-size: 14pt;
     font-weight: 300;
     color: rgb(255, 255, 255);
+    line-height: 20px;
 }
 
 h6 {
@@ -58,59 +68,264 @@ a {
     font-weight: 500;
 }
 
-#project_viewer {
-    background-image: url("https://i.ibb.co/Jnk9nP5/WIP.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size:contain;
-    height: 68%;
+#descriptionTitle {
+    color: rgb(0, 152, 167);
 }
 
-#project_description {
-    margin-left: 23%;
+#blackText {
+    color: rgb(0, 0, 0);
+}
+.project {
+    display: none;
+}
+
+#project_viewerport {
+    display: flex;
+    background-color: transparent;
+    background-position: center;
+    background-size: contain;
+    height: 65%;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.project_thumbnail {
+    min-height: 64vh;
+    max-height: 64vh;
+}
+
+.project_description {
     position: absolute;
-    top: 50%;
+    left: 20%;
+    top: 60%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+    width: 400px;
 }
+
+.project_navigate_left {
+    width: 0;
+    height: 0;
+    border-right: 100px solid rgba(155, 195, 213, 1);
+    border-top: 40px solid transparent;
+    border-bottom: 40px solid transparent;
+    background-color: transparent;
+    border-style: solid;
+    transition: 0.25s;
+    margin: 0%;
+    position: absolute;
+    top: 45%;
+    left: 2%;
+}
+
+.project_navigate_left:hover, #navigate_left:focus {
+    width: 0;
+    height: 0;
+    border-right: 100px solid rgb(85, 122, 138);
+    border-top: 40px solid transparent;
+    border-bottom: 40px solid transparent;
+    margin: 0%;
+    position: absolute;
+    top: 45%;
+    left: 2%;
+}
+
+.project_navigate_right {
+    width: 0;
+    height: 0;
+    border-left: 100px solid rgba(155, 195, 213, 1);
+    border-top: 40px solid transparent;
+    border-bottom: 40px solid transparent;
+    background-color: transparent;
+    transition: 0.25s;
+    margin: 0%;
+    position: absolute;
+    top: 45%;
+    right: 2%;
+}
+
+.project_navigate_right:hover, #navigate_right:focus {
+    width: 0;
+    height: 0;
+    border-left: 100px solid rgb(85, 122, 138);
+    border-top: 40px solid transparent;
+    border-bottom: 40px solid transparent;
+    margin: 0%;
+    position: absolute;
+    top: 45%;
+    right: 2%;
+}
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
 
 #nav_bar {
     position: absolute;
     width: 100%;
     bottom: 75px;
-    background-color: rgba(112, 235, 247, 0.3);
+    background-color: rgba(184, 220, 234, 0.63);
     height: auto;
+}
+
+.buttons_navigate_right {
+    width: 0;
+    height: 0;
+    border-left: 50px solid rgb(255, 255, 255);
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    background-color: transparent;
+    transition: 0.25s;
+    margin: 0%;
+    position: absolute;
+    top: 45%;
+    right: 11%;
+}
+
+.buttons_navigate_left {
+    width: 0;
+    height: 0;
+    border-right: 50px solid rgb(255, 255, 255);
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    background-color: transparent;
+    border-style: solid;
+    transition: 0.25s;
+    margin: 0%;
+    position: absolute;
+    top: 45%;
+    left: 11%;
 }
 
 .table {
     display: table;
     margin: 0 auto;
-    padding: 1%;
+    padding: 0.5%;
     width: 100%;
+    scroll-snap-align: y mandatory;
+}
+
+.button_fade {
+    scroll-snap-align: start;
 }
 
 ul {
     text-align: center;
-    overflow: hidden;
+    width: 100%;
 }
 
 li {
     display: inline-block;
-    padding: 0 2.5% 0  2.5%;
+    vertical-align: middle;
+    padding: 0 2.5% 0 2.5%;
 }
 
-button {
-     font-family: 'Montserrat', sans-serif;
-     padding: 5%;
-     font-size: 14pt;
-     color: black;
-     box-shadow: none;
-     border: 1px solid rgba(56, 88, 120, 255);;
-     background-color: transparent;
+ul button:only-of-type {
+    font-family: 'Montserrat', sans-serif;
+    padding: 5%;
+    font-size: 14pt;
+    font-weight: 300;
+    color: black;
+    border: 1.5px solid rgba(56, 88, 120, 255);;
+    background-color: transparent;
+    text-align: center;
+    line-height: 20px;
+    height: 60px;
+    width: 200px;
+    white-space: normal;
+    transition: 0.25s;
 }
 
-button:hover {
+ul button:only-of-type:hover, ul button:only-of-type:focus {
+    border: inset 0 0 0 2em var(--hover);
+    color:aliceblue;
+    background-color: rgba(77, 148, 200, 0.57);
+}
+
+#externalLinks {
+    background-color: transparent;
+    transition: 0.25s;
+    position: absolute;
+    bottom: 1.5%;
+    right: 2%;
+}
+
+#linked {
+    border: none;
+    background-color: transparent;
+    background-image: url(../images/linkedin_White.png);
+    background-size: cover;
+    width: 70px;
+    height: 70px;
+    transition: 0.25s;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+#linked:hover, #linked:focus {
+    background-image: url(../images/linkedin_Blue.png);
+}
+
+#insta {
+    border: none;
+    background-color: transparent;
+    background-image: url(../images/instagram_White.png);
+    background-size: cover;
+    width: 70px;
+    height: 70px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+#insta:hover, #insta:focus {
+    background-image: url(../images/instagram_Blue.png);
+}
+
+#art {
+    border: none;
+    background-color: transparent;
+    background-image: url(../images/artstation_White.png);
+    background-size: cover;
+    width: 70px;
+    height: 70px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+#art:hover, #art:focus {
+    background-image: url(../images/artstation_Blue.png);
+}
+
+#contact {
+    font-family: 'Montserrat', sans-serif;
+    padding: 0.5%;
+    font-size: 18pt;
+    font-weight: 300;
     color: aliceblue;
+    border: 0px;
+    background-color: transparent;
+    transition: 0.25s;
+    position: absolute;
+    bottom: 1.5%;
+    left: 2%;
+}
+
+#contact:hover, #contact:focus {
+    color:rgb(0, 0, 0);
 }
 
 /* Medium devices (tablets, 768px and up) */
