--- a/styles/mid-fi Style.css
+++ b/styles/mid-fi Style.css
@@ -68,11 +68,11 @@ a {
     font-weight: 500;
 }
 
-#descriptionTitle {
+.descriptionTitle {
     color: rgb(0, 152, 167);
 }
 
-#blackText {
+.blackText {
     color: rgb(0, 0, 0);
 }
 .project {
@@ -104,59 +104,6 @@ a {
     width: 400px;
 }
 
-.project_navigate_left {
-    width: 0;
-    height: 0;
-    border-right: 100px solid rgba(155, 195, 213, 1);
-    border-top: 40px solid transparent;
-    border-bottom: 40px solid transparent;
-    background-color: transparent;
-    border-style: solid;
-    transition: 0.25s;
-    margin: 0%;
-    position: absolute;
-    top: 45%;
-    left: 2%;
-}
-
-.project_navigate_left:hover, #navigate_left:focus {
-    width: 0;
-    height: 0;
-    border-right: 100px solid rgb(85, 122, 138);
-    border-top: 40px solid transparent;
-    border-bottom: 40px solid transparent;
-    margin: 0%;
-    position: absolute;
-    top: 45%;
-    left: 2%;
-}
-
-.project_navigate_right {
-    width: 0;
-    height: 0;
-    border-left: 100px solid rgba(155, 195, 213, 1);
-    border-top: 40px solid transparent;
-    border-bottom: 40px solid transparent;
-    background-color: transparent;
-    transition: 0.25s;
-    margin: 0%;
-    position: absolute;
-    top: 45%;
-    right: 2%;
-}
-
-.project_navigate_right:hover, #navigate_right:focus {
-    width: 0;
-    height: 0;
-    border-left: 100px solid rgb(85, 122, 138);
-    border-top: 40px solid transparent;
-    border-bottom: 40px solid transparent;
-    margin: 0%;
-    position: absolute;
-    top: 45%;
-    right: 2%;
-}
-
 .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
@@ -180,35 +127,6 @@ a {
     bottom: 75px;
     background-color: rgba(184, 220, 234, 0.63);
     height: auto;
-}
-
-.buttons_navigate_right {
-    width: 0;
-    height: 0;
-    border-left: 50px solid rgb(255, 255, 255);
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    background-color: transparent;
-    transition: 0.25s;
-    margin: 0%;
-    position: absolute;
-    top: 45%;
-    right: 11%;
-}
-
-.buttons_navigate_left {
-    width: 0;
-    height: 0;
-    border-right: 50px solid rgb(255, 255, 255);
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    background-color: transparent;
-    border-style: solid;
-    transition: 0.25s;
-    margin: 0%;
-    position: absolute;
-    top: 45%;
-    left: 11%;
 }
 
 .table {
