Added horizontal scrolling to both lists.

--- a/styles/mid-fi Style.css
+++ b/styles/mid-fi Style.css
@@ -7,7 +7,7 @@ html, body {
     background-position: center;
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     font-family: 'Montserrat', sans-serif;
     margin: 0%;
 }
@@ -83,29 +83,40 @@ a {
     height:100vh;
     display:inline-block;
     position:relative;
+    transform: translateY(55vh);
+
     /* Snap to start */
 	scroll-snap-align: start;
 	
 	/* Always snap */
 	scroll-snap-stop: always;
-  }
+}
 
 #project_viewerport {
     height: 130vh;
+    width: 33%;
     margin: auto;
     overflow-y:scroll;
     overflow-x:hidden;
 
     /* Moves viewport to right position */
-    transform: rotate(270deg) translateX(-60%) translateY(35vh);
+    transform: rotate(270deg) translateX(-100%) translateY(-32.5vh);
     transform-origin: top left;
 
     /* Make the scrolling snap */
 	scroll-snap-type: y mandatory;
 	scroll-behavior: smooth;
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
-#scroll-container {
+/* Hide scrollbar for Chrome, Safari and Opera */
+#project_viewerport::-webkit-scrollbar {
+    display: none;
+}
+
+#project-scroll-container {
     transform: rotate(90deg) translateY(-120vh);
     transform-origin: top left;
     white-space:nowrap;
@@ -141,69 +152,59 @@ a {
     to {opacity: 1}
 }
 
+#nav_bar .box {
+    height: 5vh;
+    width: 210vh;
+    display:inline-block;
+    position:relative;
+    transform: translateY(102vh);
+    /* Snap to start */
+	scroll-snap-align: start;
+	
+	/* Always snap */
+	scroll-snap-stop: always;
+}
+
 #nav_bar {
     position: absolute;
-    width: 100%;
-    bottom: 110px;
+    height: 205vh;
+    width: 11vh;
     background-color: rgba(184, 220, 234, 0.63);
-    height: auto;
+    margin: auto;
+    overflow-y:scroll;
+    overflow-x:hidden;
+
+    /* Moves viewport to right position */
+    transform: rotate(270deg) translateX(470%);
+    transform-origin: top left;
+
+    /* Make the scrolling snap */
+	scroll-snap-type: y mandatory;
+	scroll-behavior: smooth;
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
-.buttons_navigate_right {
-    width: 0;
-    height: 0;
-    border-left: 50px solid rgb(255, 255, 255);
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    background-color: transparent;
-    transition: 0.25s;
-    margin: 0%;
-    position: absolute;
-    top: 45%;
-    right: 11%;
+/* Hide scrollbar for Chrome, Safari and Opera */
+#nav_bar::-webkit-scrollbar {
+    display: none;
 }
 
-.buttons_navigate_left {
-    width: 0;
-    height: 0;
-    border-right: 50px solid rgb(255, 255, 255);
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    background-color: transparent;
-    border-style: solid;
-    transition: 0.25s;
-    margin: 0%;
-    position: absolute;
-    top: 45%;
-    left: 11%;
+#nav-scroll-container {
+    
+    transform: rotate(90deg) translateY(-110vh);
+    transform-origin: top left;
+    white-space:nowrap;
 }
 
-.table {
-    display: table;
-    margin: 0 auto;
-    padding: 0.5%;
-    width: 100%;
-    scroll-snap-align: y mandatory;
+.navbar_items {
+    padding: 0px 5% 0px 5%;
 }
 
-.button_fade {
-    scroll-snap-align: start;
-}
-
-ul {
-    text-align: center;
-    width: 100%;
-}
-
-li {
-    display: inline-block;
-    vertical-align: middle;
-    padding: 0 2.5% 0 2.5%;
-}
-
-ul button:only-of-type {
+button {
     font-family: 'Montserrat', sans-serif;
-    padding: 5%;
+    padding: 0%;
     font-size: 14pt;
     font-weight: 300;
     color: black;
@@ -217,7 +218,7 @@ ul button:only-of-type {
     transition: 0.25s;
 }
 
-ul button:only-of-type:hover, ul button:only-of-type:focus {
+button:hover, button:focus {
     border: inset 0 0 0 2em var(--hover);
     color:aliceblue;
     background-color: rgba(77, 148, 200, 0.57);
